2004-10-06 01:38  tiran

	* ConstrainTypesMixin.py, docs/HISTORY.txt, migration/Walker.py,
	  tests/testContrainTypes.py, types/ATContentType.py:  * Fixed [
	  1030660 ] ConstrainMixin: All types are addable in an ATFolder by
	     using a default_method to initialize the list of addable
	  types. The method
	     _globalAddableTypeIds was added to generate the list.
	     [tiran]

	   * Fixed a possible problem in allowedContentTypes: Now the
	  method is using
	     fti.isConstructionAllowed(context) to verify that the type is
	  constructable.
	     [tiran]

	   * Added an option called enableConstrainMixin which is a boolean
	  value
	     (checkbox). When set to false the constrain mixin is disabled
	  and the default
	     list of addable types is generated by using the default values
	  from
	     portal_types.
	     [tiran]

	   * Fixed [ 1030662 ] ConstrainMixin: Can't add an ATTopic to
	  portal root by not
	     subclassing ConstrainTypesMixin for ATCTFolder. ATCTFolder
	  must ONLY to used
	     as a base class for folderish but non folder types.
	     [tiran]

	   * Added max_depth workaround and logging for [ 1039846 ] Ghosts
	  in catalog
	     while migration and endless loop
	     [tiran]

2004-10-05 13:46  hoka

	* types/ATTopic.py: correct view action so that template mixin will
	  work if it is activated

2004-10-04 08:27  tiran

	* docs/HISTORY.txt, types/ATTopic.py: [ 1027108 ] Inherit criteria
	  not working. I HATE bare exceptions ...

2004-10-04 07:56  tiran

	* Extensions/toolbox.py, docs/HISTORY.txt: Fixed [ 1036255 ]
	  switchCMF2ATCT: Favorite can't be added anymore

2004-09-29 00:53  tiran

	* config.py, customconfig.py.example, docs/HISTORY.txt: fixed typos
	  in config.py, changed default history permission to review portal
	  content

2004-09-27 17:23  tiran

	* config.py: Changed mx.Tidy test to work around [ 1033396 ] Error
	  on refresh.

2004-09-27 16:55  tiran
